# scratch-rs

./: Cargo.toml  README.md
test_inotify/: Cargo.toml
test_inotify/src/: main.rs
test_serde_xml/: Cargo.toml
test_serde_xml/src/: compat.rs  focusrite.rs  lib.rs
test_serde_xml/src/focusrite/: tests.rs
test_serde_xml/src/focusrite/fixtures/: default-18i8-profile.ff.xml
test_token_auth/: Cargo.toml
