[package]
name = "test_serde_xml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_any.workspace = true
serde_with = "3"
serde_xml.workspace = true